--- a/conf/application.conf
+++ b/conf/application.conf
@@ -37,7 +37,7 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=org.h2.Driver
-db.default.url="jdbc:h2:file:C:/playdb"
+db.default.url="jdbc:h2:file:~/data/playdb"
 # db.default.user=sa
 # db.default.password=""
 #
