--- a/conf/application.conf
+++ b/conf/application.conf
@@ -70,3 +70,8 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# The public facing name of the site.  Used when sending reset emails.
+server.hostname="localhost:9000"
+
+
+include "mail"
