--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,5 +73,5 @@ logger.application=DEBUG
 # The public facing name of the site.  Used when sending reset emails.
 server.hostname="localhost:9000"
 
-
+http.cacheControl=0;
 include "mail"
